lib/saluki-metrics/tests/macros/04_no_metrics.rs
use saluki_metrics::static_metrics;

static_metrics! {
	name => Metrics,
	prefix => basic_usage,
}

fn main() {}
